# ChangeLog for www-servers/ocsigenserver
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/ocsigenserver/ChangeLog,v 1.5 2013/07/23 17:52:56 aballier Exp $

  23 Jul 2013; Alexis Ballier <aballier@gentoo.org> -ocsigenserver-2.1.ebuild,
  -files/ocsigenserver-2.1-makefile.patch:
  remove old

  23 Jul 2013; Alexis Ballier <aballier@gentoo.org> ocsigenserver-2.2.0.ebuild,
  +files/pcre.patch:
  Fix build with ocamlnet built without -compat-pcre.

*ocsigenserver-2.2.0 (13 Jan 2013)

  13 Jan 2013; Alexis Ballier <aballier@gentoo.org>
  +ocsigenserver-2.2.0.ebuild:
  version bump, bug #446724 by Jacques-Pascal Deplaix

  07 Aug 2012; Alexis Ballier <aballier@gentoo.org> ocsigenserver-2.1.ebuild:
  allow dev-ml/camldbm as gdbm binding provider

*ocsigenserver-2.1 (07 Aug 2012)

  07 Aug 2012; Alexis Ballier <aballier@gentoo.org> +ocsigenserver-2.1.ebuild,
  +files/ocsigenserver-2.1-makefile.patch, +files/ocsigenserver.confd,
  +files/ocsigenserver.initd, +metadata.xml:
  initial import, split of www-servers/ocsigen, ebuild based on old one by
  Guillaume Horel and Jacques-Pascal Deplaix, bug #406513
