@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/ocsigenserver
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/ocsigenserver/ChangeLog,v 1.5 2013/07/23 17:52:56 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/ocsigenserver/ChangeLog,v 1.6 2013/07/23 17:56:47 aballier Exp $
+
+  23 Jul 2013; Alexis Ballier <aballier@gentoo.org> ocsigenserver-2.2.0.ebuild:
+  eapi5, define subslot and add slot deps
 
   23 Jul 2013; Alexis Ballier <aballier@gentoo.org> -ocsigenserver-2.1.ebuild,
   -files/ocsigenserver-2.1-makefile.patch:
